0.7.7 (2015-04-27)
* opam: generate a $NAME.install file
* make: fix conditional compilation when --disable-xenserver set
* now compatible with tar-format.0.2.1 and tar-format.0.3.0

0.7.6 (2014-11-04)
* Upgrade to cohttp 0.12.0 API

0.7.5 (2014-06-03)
* Upgrade to cohttp 0.10
* Fix incorrect handling of tar file prefixes

0.7.3 (2014-04-04)
* sparse_dd: Fix references to Vhd_lwt.File.use_unbuffered

0.7.2 (2014-02-03)
* sparse_dd: extra config file options to use ionice

0.7.1 (2014-01-30)
* update to nbd.1.0.1

0.7.0 (2014-01-30)
* vhd-tool: can create vhd-formatted output from 'hybrid' input
* update to ocaml-vhd 0.7.0
* switch build back to OASIS/ocamlbuild from obuild
* vhd-tool: info will not fail even if the parent is missing

0.6.5 (2013-11-21)
* vhd-tool: add machine-parsable progress reporting
* vhd-tool: stream/serve support for SHA1/tar/chunked XenServer import/export encoding
* conditionally compile sparse_dd

0.6.4 (2013-11-05)
* vhd-tool serve: support receiving data as raw (no chunked or NBD)
* vhd-tool serve: use BLKGETSIZE64 to get the size of the destination block device

0.6.3 (2013-11-01)
* open vhds read/only where possible

0.6.2 (2013-10-31)
* support for opening disks > 4GiB on 32-bit hosts

0.6.1 (2013-10-25)
* sparse_dd: set the vhd parent search path to include the directory
  of the vhd, not the current directory of the sparse_dd process

0.6.0 (2013-08-02)
* sparse_dd: use O_DIRECT by default
* sparse_dd: allow encryption to be enabled and disabled via config file
* sparse_dd: experimental options to bypass tapdisk for reads and writes
* vhd-tool CLI prototype
