@@ -1,4 +1,6 @@
 language: c
-script: bash -ex .travis-ci.sh
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
+script: bash -ex .travis-opam.sh
 env:
-  - OCAML_VERSION=4.01.0 OPAM_VERSION=1.1.0
+  - PACKAGE="vhd-tool" OCAML_VERSION=4.01   REVDEPS=true
+  - PACKAGE="vhd-tool" OCAML_VERSION=latest REVDEPS=true
