@@ -1,10 +1,10 @@
-OASISFormat: 0.3
+OASISFormat: 0.4
 Name:        vhd-tool
 Version:     0.7.7
 Synopsis:    .vhd file manipulation
 Authors:     Jonathan Ludlam and David Scott
 License:     LGPL-2.1 with OCaml linking exception
-Plugins:     META (0.3)
+Plugins:     META (0.4)
 BuildTools:  ocamlbuild
 
 Flag xenserver
